--- a/music/templates/music/detail.html
+++ b/music/templates/music/detail.html
@@ -14,7 +14,7 @@
 		<label for="song{{ forloop.counter }}">
 			{{ song.song_title }}
 			{% if song.is_favorite %}
-				<i class="fa fa-star" aria-hidden="true"></i>
+				<img src="http://i.imgur.com/b9b13Rd.png">	
 			{% endif %}
 		</label>
 		<br>
