--- a/music/templates/music/index.html
+++ b/music/templates/music/index.html
@@ -1,3 +1,20 @@
+<!-- Loads the path to static path -->
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+{% load staticfiles %}
+<link rel="stylesheet" type="text/css" href="{% static 'music/style.css' %}">
+
+<nav class="navbar navbar-default">
+	<div class="container-fluid">
+
+		<!-- Logo -->
+		<div class="navbar-header">
+			<a class="navbar-brand" href="{% url 'music:index' %}">Solitaria</a>
+		</div>
+
+	</div>
+</nav>
+
 {% if all_albums %}	
 	<h2>Here are all my albums:</h2>
 	<ul>
