--- a/music/templates/music/index.html
+++ b/music/templates/music/index.html
@@ -1,17 +1,42 @@
 <!-- Loads the path to static path -->
+{% load staticfiles %}
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-{% load staticfiles %}
+<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="{% static 'music/style.css' %}">
+<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-inverse">
 	<div class="container-fluid">
 
-		<!-- Logo -->
+		<!-- Header -->
 		<div class="navbar-header">
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#topNavBar">
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
 			<a class="navbar-brand" href="{% url 'music:index' %}">Solitaria</a>
 		</div>
 
+		<!-- Items -->
+		<div class="collapse navbar-collapse">
+			<ul class="nav navbar-nav">
+				<li class="">
+					<a href="{% url 'music:index' %}">
+						<span class="glyphicon glyphicon-cd" aria-hidden="true"></span>&nbsp;
+						Albums
+					</a>
+				</li>
+				<li class="">
+					<a href="#">
+						<span class="glyphicon glyphicon-music" aria-hidden="true"></span>&nbsp;
+						Songs
+					</a>
+				</li>
+			</ul>
+		</div>
 	</div>
 </nav>
 
