--- a/music/templates/music/index.html
+++ b/music/templates/music/index.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Satisfy" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="{% static 'music/style.css' %}">
 <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
@@ -21,9 +21,9 @@
 		</div>
 
 		<!-- Items -->
-		<div class="collapse navbar-collapse">
+		<div class="collapse navbar-collapse" id="topNavBar">
 			<ul class="nav navbar-nav">
-				<li class="">
+				<li class="active">
 					<a href="{% url 'music:index' %}">
 						<span class="glyphicon glyphicon-cd" aria-hidden="true"></span>&nbsp;
 						Albums
@@ -33,6 +33,28 @@
 					<a href="#">
 						<span class="glyphicon glyphicon-music" aria-hidden="true"></span>&nbsp;
 						Songs
+					</a>
+				</li>
+			</ul>
+
+			<form class="navbar-form navbar-left" role="search" method="get" action="#">
+				<div class="form-group">
+					<input type="text" class="form-control" name="q" value="">
+				</div>
+				<button type="submit" class="btn btn-default">Search</button>
+			</form>
+
+			<ul class="nav navbar-nav navbar-right">
+				<li class="">
+					<a href="#">
+						<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>&nbsp;
+						Add Album
+					</a>
+				</li>
+				<li class="">
+					<a href="#">
+						<span class="glyphicon glyphicon-off" aria-hidden="true"></span>&nbsp;
+						Logout
 					</a>
 				</li>
 			</ul>
