--- a/music/templates/music/base.html
+++ b/music/templates/music/base.html
@@ -29,7 +29,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{% url 'music:index' %}">Viberr</a>
+            <a class="navbar-brand" href="{% url 'music:index' %}">Solitaria</a>
         </div>
 
 			<!-- Items -->
