--- a/music/templates/music/album_form.html
+++ b/music/templates/music/album_form.html
@@ -13,7 +13,7 @@
 			<div class="panel panel-default">
 				<div class="panel-body">
 
-					<form class="form-horizontal" action="#" method="post" enctyoe="multipart/form-data">
+					<form class="form-horizontal" action="#" method="post" enctype="multipart/form-data">
 						{% csrf_token %}
 						{% include 'music/form-template.html' %}
 						<div class="form-group">
